Refactor all controllers and services and writh some tests.